# VUT-MIT

./: .gitmodules  README.md
AVS/proj1/: CMakeLists.txt  MB-xzvara01.txt  advisor.sl  compare.sl  evaluate.sl
AVS/proj1/calculators/: BatchMandelCalculator.cc  BatchMandelCalculator.h  LineMandelCalculator.cc  LineMandelCalculator.h
AVS/proj1/scripts/: compare.sh
AVS/proj2/: CMakeLists.txt  PMC-xzvara01.txt  evaluate.sl  run.sl  vtune.sl
AVS/proj2/common/: ref_mesh_builder.cpp  ref_mesh_builder.h
AVS/proj2/parallel_builder/: loop_mesh_builder.cpp  loop_mesh_builder.h  tree_mesh_builder.cpp  tree_mesh_builder.h
AVS/proj2/scripts/: compare.sh
BIS/: README.md
BIS/proj1/: secrets.txt  traffic.pcapng
FLP/proj1/: Cart.hs  Datafile.hs  DecisionTree.hs  Makefile  Readme.md  flp-fun.hs
FLP/proj1/data/: classify_data  classify_data2  testcases  train_data  train_data2  train_data3  train_random_data  tree  tree2  tree3
FLP/proj1/test/: test_flp.py
FLP/proj2/: Makefile  README.md  flp23-log.pl
FLP/proj2/inputs/: unsolved_1_u  unsolved_3_f2ru2  unsolved_5_r2df2sm2  unsolved_example  (+2 more)
KRY/proj1/: README.md  cipher.txt  decypher.ipynb  key.ipynb  mycipher.txt  result.txt
KRY/proj2/: Makefile  README.md  _my_tests.py  kry.c
MSP/proj1/: proj1.ipynb
PDS/: README.md
PDS/proj1/: LICENSE  Readme.md  Readme.txt  analysis.ipynb  log-monitor.py  requirements.txt
PRL/proj1/: README.md  numbers  original_test.sh  pms  pms.cpp  run.sh  tonda_test.py
PRL/proj2/: README.md  grid.txt  life.cpp  test.sh
SCO/proj1/: README.md
SUI/: README.md
SUR/: README.md
(+40 files in other folders)
